add tag p and styles for it

--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
   </head>
   <body>
     <h1>Hello, World!</h1>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. In assumenda
+      tempore nulla ea hic dicta non eaque! Aperiam, illum perferendis?
+    </p>
   </body>
 </html>
